--- a/simora/src/main/resources/static/css/videoCall.css
+++ b/simora/src/main/resources/static/css/videoCall.css
@@ -14,14 +14,15 @@
             height: 150px;
             resize: none;
             box-sizing : border-box;
-            float:right;
+
+            float: left;
+                margin-right: 500px;
         }
 
-        .center {
+        .content {
             margin: auto;
-            width: 70%;
+            width: 60%;
             height:100%;
-            border: 3px solid #AB1112;
             padding: 130px;
         }
 
@@ -68,7 +69,7 @@
 }
 
 .message{
-
+margin-left: 250px;
 margin-top: 50px;
 }
 #sendMessageButton{
