--- a/simora/src/main/resources/templates/addSchedule.html
+++ b/simora/src/main/resources/templates/addSchedule.html
@@ -78,21 +78,21 @@
                         </td>
                         <td>
                             <select name="room" id="selectRoom">
-                                <option value="0" class="Zgjedh Departamentin">Zgjedh Sallen</option>
-                                <option value="1" class="Matematike" hidden>Salla 153</option>
-                                <option value="2" class="Matematike" hidden>Salla 114</option>
-                                <option value="3" class="Matematike" hidden>Salla 113</option>
-                                <option value="4" class="Matematike" hidden>Lab M</option>
-                                <option value="5" class="Matematike" hidden>Lab V</option>
-                                <option value="6" class="Matematike" hidden>Lab B</option>
-                                <option value="7" class="Fizike" hidden>Salla 100</option>
-                                <option value="8" class="Fizike" hidden>Salla 101</option>
-                                <option value="9" class="Biologji" hidden>Salla 200</option>
-                                <option value="10" class="Biologji" hidden>Salla 201</option>
-                                <option value="11" class="Kimi" hidden>Salla 300</option>
-                                <option value="12" class="Kimi" hidden>Salla 301</option>
-                                <option value="13" class="Gjeografi" hidden>Salla 400</option>
-                                <option value="14" class="Gjeografi" hidden>Salla 401</option>
+                                <option value="Zgjedh Sallen" class="Zgjedh Departamentin">Zgjedh Sallen</option>
+                                <option value="Salla 153" class="Matematike" hidden>Salla 153</option>
+                                <option value="Salla 114" class="Matematike" hidden>Salla 114</option>
+                                <option value="Salla 113" class="Matematike" hidden>Salla 113</option>
+                                <option value="Lab M" class="Matematike" hidden>Lab M</option>
+                                <option value="Lab V" class="Matematike" hidden>Lab V</option>
+                                <option value="Lab B" class="Matematike" hidden>Lab B</option>
+                                <option value="Salla 100" class="Fizike" hidden>Salla 100</option>
+                                <option value="Salla 101" class="Fizike" hidden>Salla 101</option>
+                                <option value="Salla 200" class="Biologji" hidden>Salla 200</option>
+                                <option value="Salla 201" class="Biologji" hidden>Salla 201</option>
+                                <option value="Salla 300" class="Kimi" hidden>Salla 300</option>
+                                <option value="Salla 301" class="Kimi" hidden>Salla 301</option>
+                                <option value="Salla 400" class="Gjeografi" hidden>Salla 400</option>
+                                <option value="Salla 401" class="Gjeografi" hidden>Salla 401</option>
                             </select>
                             <script>
                                 function selectChanged() {
@@ -123,7 +123,7 @@
                     <tr>
                         <td><label>ID: </label></td>
                         <td><input type="text" name="ID">
-                            <br><label> <em style="font-size: 0.8em;">Profesori: Alban Elezi</em></label></td>
+                            </td>
                     </tr>
                     <tr>
                         <td><label>Data dhe koha e fillimit:</label></td>
