--- a/simora/src/main/resources/templates/index.html
+++ b/simora/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
         <p>SIMORA</p>
     </div>
     <div class="photo">
-        <img src="../static/images/Avatar.png" th:src="@{images/Avatar.png}" width="200px" height="200px">
+        <img src="../static/images/Avatar.png" th:src="@{~/images/Avatar.png}" width="200px" height="200px">
     </div>
     <div class="info">
         <p th:text="${currentUser.ID}"></p>
@@ -50,13 +50,13 @@
     </div>
 
     <div style="width: 95%;" class="filter">
-        <form action="/schedule/qyshdush" method="GET">
+        <form action="/schedule/filter" method="GET">
             <table>
                 <tr>
                     <th><label>Zgjedh daten:</label></th>
                     <th><label>Zgjedh departamentin:</label></th>
                     <th><label>Zgjedh sallen:</label></th>
-                    <th><label>Shkruaj ID e profesorit:</label></th>
+                    <th><label>Shkruaj emrin e profesorit:</label></th>
                     <th rowspan="2">
                         <input type="submit" value="Filtro">
                     </th>
@@ -77,20 +77,20 @@
                     <td>
                         <select name="room" id="selectRoom">
                             <option value="Zgjedh Sallen" class="Zgjedh Departamentin">Zgjedh Sallen</option>
-                            <option value="1" class="Matematike" hidden>Salla 153</option>
-                            <option value="2" class="Matematike" hidden>Salla 114</option>
-                            <option value="3" class="Matematike" hidden>Salla 113</option>
-                            <option value="4" class="Matematike" hidden>Lab M</option>
-                            <option value="5" class="Matematike" hidden>Lab V</option>
-                            <option value="6" class="Matematike" hidden>Lab B</option>
-                            <option value="7" class="Fizike" hidden>Salla 100</option>
-                            <option value="8" class="Fizike" hidden>Salla 101</option>
-                            <option value="9" class="Biologji" hidden>Salla 200</option>
-                            <option value="10" class="Biologji" hidden>Salla 201</option>
-                            <option value="11" class="Kimi" hidden>Salla 300</option>
-                            <option value="12" class="Kimi" hidden>Salla 301</option>
-                            <option value="13" class="Gjeografi" hidden>Salla 400</option>
-                            <option value="14" class="Gjeografi" hidden>Salla 401</option>
+                            <option value="Salla 153" class="Matematike" hidden>Salla 153</option>
+                            <option value="Salla 114" class="Matematike" hidden>Salla 114</option>
+                            <option value="Salla 113" class="Matematike" hidden>Salla 113</option>
+                            <option value="Lab M" class="Matematike" hidden>Lab M</option>
+                            <option value="Lab V" class="Matematike" hidden>Lab V</option>
+                            <option value="Lab B" class="Matematike" hidden>Lab B</option>
+                            <option value="Salla 100" class="Fizike" hidden>Salla 100</option>
+                            <option value="Salla 101" class="Fizike" hidden>Salla 101</option>
+                            <option value="Salla 200" class="Biologji" hidden>Salla 200</option>
+                            <option value="Salla 201" class="Biologji" hidden>Salla 201</option>
+                            <option value="Salla 300" class="Kimi" hidden>Salla 300</option>
+                            <option value="Salla 301" class="Kimi" hidden>Salla 301</option>
+                            <option value="Salla 400" class="Gjeografi" hidden>Salla 400</option>
+                            <option value="Salla 401" class="Gjeografi" hidden>Salla 401</option>
                         </select>
                         <script>
                                 function selectChanged() {
