--- a/simora/src/main/resources/templates/userAdded.html
+++ b/simora/src/main/resources/templates/userAdded.html
@@ -48,7 +48,7 @@
 <div class="content" style="text-align:center;">
     <h1 style="color:green; margin-top:350px;">Shfrytezuesi u shtua me sukses!</h1>
     <button style=" width: 250px; height: 50px; border-radius: 15px; background-color: #9A2323;color: white;font-size:20px">
-        <a href="../index" >Kthehu te faqja kryesore</a>
+        <a href="/" >Kthehu te faqja kryesore</a>
     </button>
 </div>
 </body>
