--- a/simora/src/main/resources/templates/userCouldNotBeAdded.html
+++ b/simora/src/main/resources/templates/userCouldNotBeAdded.html
@@ -46,7 +46,7 @@
 </div>
 
 <div class="content" style="text-align:center;">
-    <h1 style="color:green; margin-top:350px;">Orari u shtua me sukses!</h1>
+    <h1 style="color:green; margin-top:350px;">Shfrytezuesi eshte ne sistem, prandaj nuk mund te shtohet!</h1>
     <button style=" width: 250px; height: 50px; border-radius: 15px; background-color: #9A2323;color: white;font-size:20px">
         <a href="/" >Kthehu te faqja kryesore</a>
     </button>
