--- a/simora/src/main/resources/templates/recoveryPassword.html
+++ b/simora/src/main/resources/templates/recoveryPassword.html
@@ -19,22 +19,22 @@
     </div>
 
     <div class="login">
-        <form action="#" method="post">
+        <form action="/setPassword" method="get">
             <img src="../static/images/logo.png" th:src="@{images/logo.png}" alt="logo e UP" width="200px"/>
 
             <div class="id">
+                <input type ="hidden" th:name="ID" th:value="${id}" />
                 <label>Shkruaj fjalekalimin e ri:</label><br>
                 <i class="fa fa-key icon"></i>
-                <input class="input-field" type="password" placeholder="Shkruaj fjalekalimin..." ><br>
+                <input class="input-field" type="password" name="password" placeholder="Shkruaj fjalekalimin..." ><br>
                 <label>Rishkruaj fjalekalimin e ri:</label><br>
                 <i class="fa fa-key icon"></i>
-                <input class="input-field" type="password" placeholder="Shkruaj fjalekalimin..." ><br>
+                <input class="input-field" type="password" name="repeatPassword"placeholder="Shkruaj fjalekalimin..." ><br>
 
                 <input type="submit" value="Ndrysho">
             </div>
 
         </form>
-        <p><a href="#">Keni harruar fjalekalimin?</a></p>
     </div>
 </div>
 
